# sn-gamestate

./: .gitignore  ChallengeRules.md  FAQ.md  README.md  pyproject.toml
plugins/calibration/: pyproject.toml
plugins/calibration/nbjw_calib/: .uuid
plugins/calibration/nbjw_calib/config/: .uuid  hrnetv2_w48.yaml  hrnetv2_w48_l.yaml
plugins/calibration/nbjw_calib/model/: .uuid  awloss.py  cls_hrnet.py  cls_hrnet_l.py  dataloader.py  dataloader_l.py  losses.py  metrics.py  transforms.py  transformsWC.py  transformsWC_l.py  transforms_l.py
plugins/calibration/nbjw_calib/sn_calibration/: .uuid  ChallengeRules.md  README.md  requirements.txt
plugins/calibration/nbjw_calib/sn_calibration/resources/: std.npy
plugins/calibration/nbjw_calib/sn_calibration/src/: baseline_cameras.py  camera.py  dataloader.py  detect_extremities.py  evalai_camera.py  evaluate_camera.py  evaluate_extremities.py  soccerpitch.py
plugins/calibration/nbjw_calib/utils/: .uuid  utils_calib.py  utils_calib_seq.py  utils_field.py  utils_geometry.py  utils_heatmap.py  utils_keypoints.py  utils_keypointsWC.py  utils_lines.py  utils_linesWC.py
plugins/calibration/pnlcalib/model/: cls_hrnet.py  cls_hrnet_l.py
plugins/calibration/pnlcalib/utils/: utils_calib.py  utils_heatmap.py  utils_optimize.py
plugins/calibration/sn_calibration_baseline/: baseline_cameras.py  camera.py  dataloader.py  detect_extremities.py  evalai_camera.py  evaluate_camera.py  evaluate_extremities.py  soccerpitch.py
plugins/calibration/tvcalib/: README.md  cam_modules.py  fuse_argmin.py  fuse_stack.py  inference.py  module.py  optimize.py  sncalib_dataset.py  visualize_per_sample_output.ipynb
plugins/calibration/tvcalib/cam_distr/: tv_main_behind.py  tv_main_center.py  tv_main_left.py  tv_main_right.py  tv_main_tribune.py
plugins/calibration/tvcalib/utils/: data_distr.py  io.py  linalg.py  objects_3d.py  visualization_mpl.py  visualization_mpl_min.py
pretrained_models/calibration/: mean.npy
sn_gamestate/: __init__.py  config_finder.py
sn_gamestate/calibration/: baseline.py  bbox2pitch.py  nbjw_calib.py  pitch.py  pnlcalib.py  tvcalib.py
sn_gamestate/configs/: soccernet.yaml
sn_gamestate/configs/dataset/: youtube.yaml
sn_gamestate/configs/eval/: gs_hota.yaml
sn_gamestate/configs/visualization/: gamestate.yaml
sn_gamestate/jersey/: easyocr_api.py  mmocr_api.py  voting_tracklet_jn_api.py
sn_gamestate/reid/: prtreid_api.py  prtreid_dataset.py
sn_gamestate/team/: __init__.py  tracklet_side_labeling_api.py  tracklet_team_clustering_api.py  tracklet_team_hdb_clustering_api.py  tracklet_team_labeling_api.py  tracklet_team_side_labeling_api.py
sn_gamestate/visualization/: __init__.py  pitch.py  pitch_visualization.py
tutorials/: tutorial_seperate_jersey_number_pipeline.md
(+28 files in other folders)
